updated css and js

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <body>
 
     <header>
-        <div class="top-header"><span><i class="fas fa-mobile-alt"></i>0751 305677</span><span><i class="fas fa-map-marker-alt"></i>Sibiu, Str. Piaţa Tălmaciu, Nr. 2</span><span><i class="fas fa-hourglass-half"></i>Luni-Vineri » Lung: 7:30 - 17:30 | Scurt: 7:30 - 12:30</span>
-            <span><i class="fas fa-search"></i></span>
+        <div class="top-header">
+            <span><i class="fas fa-mobile-alt"></i>0751 305677</span><span><i class="fas fa-map-marker-alt"></i>Sibiu, Str. Piaţa Tălmaciu, Nr. 2</span><span><i class="fas fa-hourglass-half"></i>Luni-Vineri » Lung: 7:30 - 17:30 | Scurt: 7:30 - 12:30</span>
+            <span><i class="fas fa-search"></i></span><span><i class="fab fa-facebook-f"></i></span>
         </div>
         <div class="bottom-header">
             <div class="bottom-header-conatiner">
@@ -161,20 +162,25 @@
                 <img src="img/image-home-3.png" class="rocket">
             </div>
             <div class="oV-love">
-                <img src="img/heart_PNG51183-2.png" class="ov-img">
-                <span class="title-color">Dragoste</span>
-                <p class="gray-text">
-                    Dragostea este în fruntea a tot ceea ce facem iar ceea ce facem nu este doar un serviciu ci este o extensie a iubirii noastre pentru copii.
-                </p>
+
+                <div class="ov-img-box ovImgBox-love"><img src="img/heart_PNG51183-2.png" class="ov-img"></div>
+                <div class="ov-content">
+                    <span class="title-color">Dragoste</span>
+                    <p class="gray-text">
+                        Dragostea este în fruntea a tot ceea ce facem iar ceea ce facem nu este doar un serviciu ci este o extensie a iubirii noastre pentru copii.
+                    </p>
+                </div>
 
             </div>
 
             <div class="ov-trust">
-                <img src="img/trust.png" class="ov-img">
-                <span class="title-color">Încrederea</span>
-                <p class="gray-text">
-                    Ne străduim spre excelenţă, suntem cinstiţi în tot ceea ce facem si pentru asta am promis să punem binele copilului înaintea oricarei decizii si acţiuni.
-                </p>
+                <div class="ov-img-box ovImgBox-trust"><img src="img/trust.png" class="ov-img"></div>
+                <div class="ov-content">
+                    <span class="title-color">Încrederea</span>
+                    <p class="gray-text">
+                        Ne străduim spre excelenţă, suntem cinstiţi în tot ceea ce facem si pentru asta am promis să punem binele copilului înaintea oricarei decizii si acţiuni.
+                    </p>
+                </div>
 
             </div>
 
@@ -184,29 +190,35 @@
 
 
             <div class="ov-development">
-                <img src="img/dev.png" class="ov-img">
-                <span class="title-color">Dezvoltarea</span>
-                <p class="gray-text">
-                    Suntem deschişi la învaţare şi îmbrăţişăm curiozitatea si inovarea.
-                </p>
+                <div class="ov-img-box ovImgBox-dev"><img src="img/dev.png" class="ov-img"></div>
+                <div class="ov-content">
+                    <span class="title-color">Dezvoltarea</span>
+                    <p class="gray-text">
+                        Suntem deschişi la învaţare şi îmbrăţişăm curiozitatea si inovarea.
+                    </p>
+                </div>
 
             </div>
 
             <div class="ov-cautation">
-                <img src="img/cautation.png" class="ov-img">
-                <span class="title-color">Atenţia</span>
-                <p class="gray-text">
-                    Suntem conştienţi de impactul acţiunilor noastre şi există mereu un scop atent ales în spatele a tot ceea ce facem.
-                </p>
+                <div class="ov-img-box ovImgBox-cautation"><img src="img/cautation.png" class="ov-img"></div>
+                <div class="ov-content">
+                    <span class="title-color">Atenţia</span>
+                    <p class="gray-text">
+                        Suntem conştienţi de impactul acţiunilor noastre şi există mereu un scop atent ales în spatele a tot ceea ce facem.
+                    </p>
+                </div>
 
             </div>
 
             <div class="ov-connect">
-                <img src="img/share.png" class="ov-img">
-                <span class="title-color">Conectarea</span>
-                <p class="gray-text">
-                    Construim relaţii de încredere, de acceptare şi sprijin cu toţi partenerii noştri, copii, părinţi, comunitate.
-                </p>
+                <div class="ov-img-box ovImgBox-connect"><img src="img/share.png" class="ov-img"></div>
+                <div class="ov-content">
+                    <span class="title-color">Conectarea</span>
+                    <p class="gray-text">
+                        Construim relaţii de încredere, de acceptare şi sprijin cu toţi partenerii noştri, copii, părinţi, comunitate.
+                    </p>
+                </div>
 
             </div>
 
